enum  EstadoFoco{
Encendido,
Apagado

};


