@startuml diagrama

class Usuario
class Serie
{
    -foco : foquitos[10]
    +EncenderCantidad(Numero)
    +EncenderTodo()
    +ApagarTodo()
    +ApagarCantidad(Numeros)
    +RecorrerIzq()
    +RecorrerDer()
    +AlternarEnc()
}

class Foco
{
-EstadoFoco : estado
+ Encender ()
+ Apagar ()
+ Imprimir ()
}
enum EstadoFoco
{
Encendido
Apagado
}


Foco *-- EstadoFoco
Usuario o-- Foco
Serie "1" *-- "10" Foco 
Usuario o-- Serie


@enduml   

